--- a/public/a_la_francaise.html
+++ b/public/a_la_francaise.html
@@ -39,8 +39,8 @@
                     <article class="carte_article">
 
                         <div class="carte_article_content">
-                            <span class="carte_article_title">Fricassée d'escargot</span>
-                            <p class="carte_article_description"> Aux pimet d'espelette </p>
+                            <span class="carte_article_title">Tartare de poulpe acidulé</span>
+                            <p class="carte_article_description"> Aux zests d'orange </p>
                         </div>
 
                         <p class="carte_article_price">25€</p>
@@ -58,8 +58,8 @@
 
                     <article class="carte_article">
                         <div class="carte_article_content">
-                            <span class="carte_article_title">Foie gras de canard mi-cuit</span>
-                            <p class="carte_article_description"> Et ses copeaux de truffe noire</p>
+                            <span class="carte_article_title">Velouté de légumes d'antan</span>
+                            <p class="carte_article_description"> Carotte, panais,topiambour</p>
                         </div>
 
                         <p class="carte_article_price">35€</p>
@@ -76,8 +76,8 @@
 
                     <article class="carte_article">
                         <div class="carte_article_content">
-                            <span class="carte_article_title">Oeuf au plat</span>
-                            <p class="carte_article_description"> Assaisoné à la truffe sur lit de</p>
+                            <span class="carte_article_title">Soupe à l'oignon </span>
+                            <p class="carte_article_description"> Revisitée</p>
                         </div>
 
                         <p class="carte_article_price">20€</p>
@@ -94,8 +94,8 @@
                     <h3 class="carte_entree">PLATS</h3>
                     <article class="carte_article">
                         <div class="carte_article_content">
-                            <span class="carte_article_title">Filet de boeuf aux herbes</span>
-                            <p class="carte_article_description"> Accompagnée de sa ribambelle de légumes</p>
+                            <span class="carte_article_title">Coquilles Saint-Jacques</span>
+                            <p class="carte_article_description"> Accompagnée d'une purée de panais'</p>
                         </div>
                         <p class="carte_article_price">40€</p>
 
@@ -109,8 +109,8 @@
 
                     <article class="carte_article">
                         <div class="carte_article_content">
-                            <span class="carte_article_title">Parmentier de queue de boeuf</span>
-                            <p class="carte_article_description"> À la truffe noire sur sa purée de panais</p>
+                            <span class="carte_article_title">Magret de canard</span>
+                            <p class="carte_article_description"> Et parmentier de pommes de terres</p>
                         </div>
                         <p class="carte_article_price">35€</p>
 
@@ -124,8 +124,8 @@
 
                     <article class="carte_article">
                         <div class="carte_article_content">
-                            <span class="carte_article_title">Filet de Turbot</span>
-                            <p class="carte_article_description">Aux agrumes</p>
+                            <span class="carte_article_title">Pigeonneau d'Ille-et-Vilaine</span>
+                            <p class="carte_article_description">Sur sont lit de gnocchis aux kégumes</p>
                         </div>
 
                         <p class="carte_article_price">44€</p>
@@ -142,8 +142,8 @@
                     <h3 class="carte_entree">DESSERTS</h3>
                     <article class="carte_article">
                         <div class="carte_article_content">
-                            <span class="carte_article_title">Paris-Brest</span>
-                            <p class="carte_article_description">Revisité</p>
+                            <span class="carte_article_title">Pétales de violettes glacés</span>
+                            <p class="carte_article_description">Et purée de noisettes</p>
                         </div>
                         <p class="carte_article_price">18€</p>
 
@@ -157,8 +157,8 @@
                     <article class="carte_article">
 
                         <div class="carte_article_content">
-                            <span class="carte_article_title">Macaron au chocolat d'exception</span>
-                            <p class="carte_article_description"> Et glace à la vanille de Madagascar</p>
+                            <span class="carte_article_title">Fondant au chocolat</span>
+                            <p class="carte_article_description"> Revisité</p>
                         </div>
                         <p class="carte_article_price">22€</p>
                         <div class="carte_article_checkbox">
@@ -171,8 +171,8 @@
                     <article class="carte_article">
 
                         <div class="carte_article_content">
-                            <span class="carte_article_title">Mousse au chocolat</span>
-                            <p class="carte_article_description"> Au piment d'espelette et à la truffe noire</p>
+                            <span class="carte_article_title">Millefeuille croustillant</span>
+                            <p class="carte_article_description"> Myrtilles et pâte d'amande</p>
                         </div>
 
                         <p class="carte_article_price">23€</p>
